--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
+      font-size:140%;
     }
     h1 {
       text-align: center;
