--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <li><a href="https://manasmm007.github.io/Weather-Ease">Weather Ease</a></li>
     <li><a href="https://manasmm007.github.io/RPS">Rock Paper and Scissors</a></li>
     <li><a href="https://manasmm007.github.io/Manas-Cypher">Manas Cypher</a></li>
+    <h1>Notes</h1>
+    <li><a href="https://drive.google.com/drive/u/0/mobile/folders/1LaJoTkQcvxUyOHIl8Hi8KAQiSD4d4Ch-?sort=13&direction=a">Data Structure</a></li>
   </ul>
 </body>
 </html>
