--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li><a href="https://manasmm007.github.io/RPS">Rock Paper and Scissors</a></li>
     <li><a href="https://manasmm007.github.io/Manas-Cypher">Manas Cypher</a></li>
     <h1>Notes</h1>
+    <li><a href="https://drive.google.com/drive/folders/1iGXUlTmUKaF0T5TKJkhxTiTGtE888LM0?usp=sharing">Computer Organization and Architecture</a></li>
     <li><a href="https://drive.google.com/drive/u/0/mobile/folders/1LaJoTkQcvxUyOHIl8Hi8KAQiSD4d4Ch-?sort=13&direction=a">Data Structure</a></li>
   </ul>
 </body>
