--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <h1>Notes</h1>
     <li><a href="https://drive.google.com/drive/folders/1iGXUlTmUKaF0T5TKJkhxTiTGtE888LM0?usp=sharing">Computer Organization and Architecture</a></li>
     <li><a href="https://drive.google.com/drive/u/0/mobile/folders/1LaJoTkQcvxUyOHIl8Hi8KAQiSD4d4Ch-?sort=13&direction=a">Data Structure</a></li>
+    <h1>Github</h1>
+    <li><a href="https://github.com/bikashdev01/First-Section-Code/">First</a></li>
   </ul>
 </body>
 </html>
