--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <li><a href="https://drive.google.com/drive/u/0/mobile/folders/1LaJoTkQcvxUyOHIl8Hi8KAQiSD4d4Ch-?sort=13&direction=a">Data Structure</a></li>
     <h1>Github</h1>
     <li><a href="https://github.com/bikashdev01/First-Section-Code/">First</a></li>
+    <li><a href="https://docs.google.com/document/d/10kgiXyQTK4wkmUcUxgfk8MJMHccm55o4/edit?usp=sharing&ouid=108126241517888712983&rtpof=true&sd=true">CE</a></li>
   </ul>
 </body>
 </html>
